syntax = "proto3";

package bigstar.character;

option go_package ="github.com/dtherhtun/Learning-go/ops/proto.cc/go/character";

import "schemas/character/message.proto";

service CharacterService {
  rpc GetCharacters(AllCharactersRequest) returns (AllCharactersResponse);
  rpc GetCharacterById(GetCharacterRequest) returns (GetCharacterResponse);
}